--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 body {
   overflow: scroll;
   /* background-color: #80808029; */
-    background-color: #fffcfcb8;
-    backdrop-filter: blur(50px);
+    background-color: #f8f8f8;
 }
 
 .main {
@@ -150,6 +149,9 @@ input[type='checkbox'] {
 .bg-red {
   background: #ffdbdb !important;
 
+}
+.h-100{
+  height: 100%;
 }
 
 .width-100 {
