--- a/style.css
+++ b/style.css
@@ -235,75 +235,28 @@ background-color: #e4e4e4 !important;
   transform: translate(50%, -50%);
 }
 
-.inner-circle {
-  width: 40%;
-  height: 40%;
-  border-radius: 50%;
-  background-color: #ffffff;
-  z-index: 1;
-  border: 2px solid black;
-  display: none;
-}
-
-.quarter {
-  position: absolute;
-  width: 50%;
-  height: 50%;
-
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  z-index: 0;
+.square{
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
 }
-
-.quarter-1 {
-  background-color: #ffffff;
-  top: 0;
-  left: 0;
-  /* border-top-left-radius: 100% */
+.main-squre{
+  border: 1px solid black;
+  width: max-content;
+  position: relative;
 }
 
-.quarter-2 {
-  background-color: #ffffff;
-  top: 0;
-  right: 0;
-  /* border-top-right-radius: 100% */
-}
-
-.quarter-3 {
-  background-color: #ffffff;
-  bottom: 0;
-  left: 0;
-  /* border-bottom-left-radius: 100% */
-}
-
-.quarter-4 {
-  background-color: #ffffff;
-  bottom: 0;
-  right: 0;
-  /* border-bottom-right-radius: 100% */
-}
-
-.handle {
+/* Inner square */
+.inner-square {
+  width: 30px;
+  height: 30px;
+  border: 1.5px solid black;
   position: absolute;
-  width: 4px;
-  height: 20px;
-  background-color: #000000;
-  top: -20px; /* Adjust the position as needed */
-  left: 50%;
-  transform: translateX(-50%);
+  background-color: white;
   z-index: 2;
-}
-
-.handle-horizontal {
-  position: absolute;
-  width: 4px;
-  height: 25px;
-  background-color: #000000;
-  top: -35px; /* Adjust the position as needed */
-  left: 48%;
-  transform: rotate(90deg);
-  z-index: 2;
-
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
 }
 
 @media (max-width: 1300px) {
