--- a/style.css
+++ b/style.css
@@ -245,7 +245,9 @@ background-color: #e4e4e4 !important;
   width: max-content;
   position: relative;
 }
-
+.square-1,.square-4{
+  background-color: #6c757d;
+}
 /* Inner square */
 .inner-square {
   width: 30px;
@@ -253,7 +255,7 @@ background-color: #e4e4e4 !important;
   border: 1.5px solid black;
   position: absolute;
   background-color: white;
-  z-index: 2;
+  z-index: 0;
   top: 50%;
   right: 50%;
   transform: translate(50%, -50%);
